@@ -1,4 +1,3 @@
-/dist.ini
 /MANIFEST.SKIP
 /Dancer2-Plugin-MarkdownFilesToHTML-*
 /tmp
@@ -6,4 +5,3 @@
 *~
 *.swp
 *.swo
-weaver.ini
