@@ -1,0 +1,56 @@
+name    = Dancer2-Plugin-MarkdownFilesToHTML
+author  = Steve Dondley <s@dondley.com>
+license = Perl_5
+copyright_holder = Steve Dondley
+copyright_year   = 2018
+
+[Repository]
+[Bugtracker]
+web = http://github.com/sdondley/%s/issues
+[Git::NextVersion]
+[GitHub::Meta]
+[PodVersion]
+[PkgVersion]
+[NextRelease]
+[Run::AfterRelease]
+run = mv Changes tmp && cp %n-%v/Changes Changes
+[InstallGuide]
+
+[PodWeaver]
+[ReadmeAnyFromPod]
+type = markdown
+location = root
+phase = release
+
+
+[Git::Check]
+[Git::Commit]
+allow_dirty = README.mkdn
+allow_dirty = Changes
+allow_dirty = INSTALL
+[Git::Tag]
+[Git::Push]
+[Run::AfterRelease / MyAppAfter]
+run = mv tmp/Changes Changes
+
+[GatherDir]
+[Prereqs]
+Markdent = 0;
+[AutoPrereqs]
+[PruneCruft]
+[PruneFiles]
+;filename = weaver.ini
+filename = README.mkdn
+;filename = dist.ini
+filename = .gitignore
+[ManifestSkip]
+[MetaYAML]
+[License]
+[Readme]
+[ExtraTests]
+[ExecDir]
+[ShareDir]
+[MakeMaker]
+[Manifest]
+[TestRelease]
+[FakeRelease]
