@@ -1,0 +1,33 @@
+[@CorePrep]
+
+[Name]
+[Version]
+
+[Generic / OVERVIEW]
+[Generic / SYNOPSIS]
+[Generic / DESCRIPTION]
+
+[Collect / KEYWORDS]
+command = keyword
+
+[Collect / OPTIONS]
+command = option
+
+[Collect / ATTRIBUTES]
+command = attr
+
+[Generic / CONFIGURATION]
+[Requires]
+[Support]
+websites = metacpan
+bugs = none
+[BugsAndLimitations]
+[Generic / DEVELOPER NOTES]
+[Installation]
+[Generic / SEE ALSO ]
+
+[Authors]
+[Legal]
+
+[-Transformer]
+transformer = List
